tdf#123485 Excel 2003 xml file with xls extension detected as HTML

regression from
   commit 7ea01578eed8459678369d0256de016930b3af40
   Date:   Fri Oct 19 13:04:43 2018 +0200
   loplugin:staticvar in soltools..svx

turns out using std::lower_bound as a binary search is rather painful.

Change-Id: Ide6f5cf4ff91a8832daa43a7fec2f5cfc97fc94a
Reviewed-on: https://gerrit.libreoffice.org/67951
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit bdc9bdccb61130355784800f99b4fd726d6c424d)
Reviewed-on: https://gerrit.libreoffice.org/67957